--- a/components/card.module.css
+++ b/components/card.module.css
@@ -1,3 +1,8 @@
 .container {
   width: 100%;
 }
+
+.cardHeader {
+  display: flex;
+  justify-content: center;
+}
